--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "@babel/preset-react": "^7.7.4",
+    "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "babel-loader": "^8.0.6",
     "babel-preset-stage-1": "^6.24.1",
